force-app/main/default/objects/Knowledge_Comment__c/Knowledge_Comment__c.object-meta.xml
<CustomObject>
    <label>Knowledge Comment</label>
    <nameField>
        <displayFormat>CMNT-{0000000000}</displayFormat>
        <label>Comment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Knowledge  Comments</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>