force-app/main/default/objects/Knowledge_Comment__c/fields/date_created__c.field-meta.xml
<CustomField>
    <fullName>date_created__c</fullName>
    <label>date created</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>