force-app/main/default/objects/Knowledge_Comment__c/fields/Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Knowledge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Knowledge</label>
    <referenceTo>Knowledge__kav</referenceTo>
    <relationshipLabel>Knowledge  Comments</relationshipLabel>
    <relationshipName>Knowledge_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>