force-app/main/default/objects/Knowledge_Comment__c/fields/Knowledge_Comment__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Comment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Knowledge Comment</label>
    <referenceTo>Knowledge_Comment__c</referenceTo>
    <relationshipLabel>Knowledge  Comments</relationshipLabel>
    <relationshipName>Knowledge_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>